--- a/.gitmodules
+++ b/.gitmodules
@@ -25,17 +25,17 @@
 	path = ggrrr
 	url = https://github.com/terminological/ggrrr
 	shallow = true
-	branch = *release
+	branch = 0.0.0.9015
 	registered = true
 [submodule "testRapi"]
 	path = testRapi
 	url = https://github.com/terminological/r6-generator-docs
 	shallow = true
-	branch = *release
+	branch = 0.5.6
 	registered = true
 [submodule "roogledocs"]
 	path = roogledocs
 	url = https://github.com/terminological/roogledocs
 	shallow = true
-	branch = *release
+	branch = 0.1.0
 	registered = true
