--- a/.gitmodules
+++ b/.gitmodules
@@ -39,3 +39,9 @@
 	shallow = true
 	branch = 0.1.0
 	registered = true
+[submodule "arear"]
+	path = arear
+	url = https://github.com/terminological/arear
+	shallow = true
+	branch = *release
+	registered = true
